<resources>
    <string name="app_name">extremeSchnapsen</string>
    <string name="enter_username">Gib einen Benutzernamen an</string>
    <string name="username_hint">Benutzername</string>
    <string name="registerBtn_Name">Registrieren</string>

    <string name="txvShowAvailableDevices">Verfügbare Geräte</string>

    <string name="msgWifiP2pSearching">Suche läuft</string>
    <string name="msgWifiP2pNotWorking">Es gibt ein Problem mit der Netzwerkschnittstelle. Ist WLAN ausgeschaltet?</string>
    <string name="msgWaitingForOpposite">Warten auf Gegenspieler</string>
    <string name="msgWaiting">Warten...</string>
    <string name="msgWaitingForConnection">Warten auf Verbindung</string>

    <string name="btnSearchForP2PDevices">Suchen...</string>

    <string name="editText_errorMessage">Das Feld darf nicht leer sein.</string>

    <string name="btnSearch">Spieler suchen</string>
    <string name="btnStartGame">Spiel starten</string>
    <string name="btnFinishGame">Spiel beenden</string>
    <string name="btnStartNextRoundWon">Du hast die Runde gewonnen, nächste Runde starten</string>
    <string name="btnStartNextRoundLost">Du hast die Runde verloren, nächste Runde starten</string>
    <string name="btnGameWon">Spiel gewonnen, nächste Runde?</string>
    <string name="btnGameLost">Spiel verloren, neue Partie?</string>

    <!-- menu button strings -->
    <string name="btn_menu_profil">Benutzerprofil</string>
    <string name="btn_menu_settings">Spieleinstellungen</string>
    <string name="btn_menu_start_game">Spiel Starten</string>

    <string name="msgPlayerWon">Der Stich gehört dir, du bist am Zug</string>
    <string name="msgPlayerLost">Der Stich ging an den Gegner, er ist nun dran</string>
    <string name="msgWaitingForOpppositeMove">Warten auf Zug des Gegners</string>
    <string name="msgYourTurn">Du bist am Zug</string>
    <string name="msg20Played">Du hast 20 angesagt</string>
    <string name="msg20Received">Der Gegner hat 20 angesagt</string>
    <string name="msg40Played">Du hast 40 angesagt</string>
    <string name="msg40Received">Der Gegner hat 40 angesagt</string>
    <string name="msgSightJoker">Du hast den Sichtjoker eingesetzt</string>
    <string name="msgParrySightJokerSuccessWon">Du hast den Parrier-Sichtjoker eingesetzt und Recht gehabt! Du bekommst 10 Punkte</string>
    <string name="msgParrySightJokerSuccessLost">Der Gegner hat den Parrier-Sichtjoker eingesetzt und Recht gehabt! Er bekommt 10 Punkte</string>
    <string name="msgParrySightJokerFailWon">Der Gegner hat den Parrier-Sichtjoker eingesetzt und nicht Recht gehabt! Du bekommst 10 Punkte</string>
    <string name="msgParrySightJokerFailLost">Du hast den Parrier-Sichtjoker eingesetzt und nicht Recht gehabt! Der Gegner bekommt 10 Punkte</string>
    <string name="msgParrySightJokerNotPossible">Du kannst den Parrier-Sichtjoker jetzt nicht einsetzen</string>
    <string name="msgSightJokerNotPossible">Du kannst den Sichtjoker erst einsetzen, wenn du am Zug bist!</string>
    <string name="msgCardExchanged">Du hast den Kartentausch Joker eingesetzt. Du bist am Zug</string>
    <string name="msgCardExchangeReceived">Der Gegner hat den Kartentausch Joker eingesetzt. Er ist am Zug</string>
    <string name="msgTurnedCalledSuccess">Du hast zugedreht. Du bist am Zug</string>
    <string name="msgTurnedCalledFail">Du kannst nicht zudrehen. Du bist am Zug</string>
    <string name="msgTurnedReceived">Der Gegner hat zugedreht. Er ist am Zug</string>


    <string name="title_activity_profil">ProfilActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Spielerprofil strings -->

    <string name="back_to_menu">Zurück zum Hauptmenu</string>

    <string name="txvSettings">Spieleinstellungen</string>
    <string name="txvGameMode">Spielmodus</string>

    <string name="rbtnNormal">Normales Schnapsen</string>
    <string name="rbtnExtreme">ExtremeSchnapsen</string>
    <string name="rbtnDoesNotMatter">Egal</string>

    <string name="btnStartGameNormal">Spiel starten (normal)</string>
    <string name="btnStartGameExtreme">Spiel starten (extreme)</string>

    <string name="btnClose">Schließen</string>

</resources>
