<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.GameSettingsActivity"
    android:background="@drawable/background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50sp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txvSettings"
            android:text="@string/txvSettings"
            android:textColor="#FFF"
            android:textSize="25sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txvGameMode"
            android:text="@string/txvGameMode"
            app:layout_constraintTop_toBottomOf="@+id/txvSettings"
            android:layout_marginTop="50dp"
            android:textColor="#FFF"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/rgGameSettings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="85sp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbtnNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtnNormal"
                android:textColor="#FFF"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/txvGameMode"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbtnExtreme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtnExtreme"
                android:textColor="#FFF"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/rbtnNormal" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnBackToMainMenu"
            android:text="@string/back_to_menu"
            style="@style/CustomButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onClickBtnBackToMenu"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>