<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="cardfactory.com.extremeschnapsen.RegisterActivity">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:textColor="#FFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:textColor="#FFF"
        android:inputType="textPersonName"
        android:textColorHint="#FFF"
        app:layout_constraintStart_toStartOf="@+id/usernameTextView"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

    <Button
        android:id="@+id/registerBtn"
        style="@style/CustomButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="12dp"
        android:text="@string/registerBtn_Name"
        app:layout_constraintStart_toStartOf="@+id/usernameTextView"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

</android.support.constraint.ConstraintLayout>
